popovers: Fix wrapping in condensed popover when count is present.

--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -861,6 +861,7 @@ li.top_left_scheduled_messages {
     .unread_count {
         margin: 1px 0 0 6px;
         border-color: var(--color-border-unread-counter-popover-menu);
+        width: max-content;
     }
 }
 
